// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Если вставить четвертак и провернуть ручку, машина отдаёт жвачку 1`] = `
"You inserted a quarter

You turned...

A gumball comes rolling out the slot

Oops, out of gumballs

"
`;

exports[`Если вставить четвертак и провернуть ручку, машина отдаёт жвачку 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Если ручка была провёрнута четвертак изъять нельзя 1`] = `
"You inserted a quarter

You turned...

A gumball comes rolling out the slot

Oops, out of gumballs

You can't eject, you haven't inserted a quarter yet

"
`;

exports[`Если ручка была провёрнута четвертак изъять нельзя 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Можно достать всю жвачку из автомата 1`] = `""`;

exports[`Можно достать всю жвачку из автомата 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Можно забрать четвертак, после того как он был вставлен 1`] = `
"You inserted a quarter

Quarter returned

"
`;

exports[`Можно забрать четвертак, после того как он был вставлен 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`Можно заполнить автомат 1`] = `""`;

exports[`Можно заполнить автомат 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`Нельзя вставить два четвертака за раз 1`] = `
"You inserted a quarter

You can't insert another quarter

"
`;

exports[`Нельзя вставить два четвертака за раз 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 2 gumballs
Machine is waiting for turn of crank
"
`;

exports[`Нельзя достать четвертак, если он не был всавлен 1`] = `
"You haven't inserted a quarter
"
`;

exports[`Нельзя достать четвертак, если он не был всавлен 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 2 gumballs
Machine is waiting for quarter
"
`;

exports[`Нельзя получить жвачку если она закочилась 1`] = `
"You can't insert a quarter, the machine is sold out

You turned but there's no gumballs

"
`;

exports[`Нельзя получить жвачку если она закочилась 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 0 gumballs
Machine is sold out
"
`;

exports[`Нельзя провернуть ручку, если четвертак не был вставлен 1`] = `
"You turned but there's no quarter

"
`;

exports[`Нельзя провернуть ручку, если четвертак не был вставлен 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 1 gumball
Machine is waiting for quarter
"
`;

exports[`После первого шарика жвачки можно получить следующий, если в автомате есть жвачка 1`] = `
"You inserted a quarter

You turned...

A gumball comes rolling out the slot

You inserted a quarter

You turned...

A gumball comes rolling out the slot

Oops, out of gumballs

"
`;

exports[`После первого шарика жвачки можно получить следующий, если в автомате есть жвачка 2`] = `
"
Mighty Gumball, Inc.
JS-enabled Standing Gumball Model #2016
Inventory: 0 gumballs
Machine is sold out
"
`;
